--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pino": "^8.19.0",
     "playwright": "^1.50.1",
     "playwright-core": "^1.50.1",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1",
